--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.8",
+    "expo-checkbox": "^2.4.0",
+    "expo-constants": "^14.4.2",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "^12.3.2",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-safe-area-context": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
